[package]
name = "redrelay"
version = "0.1.0"
rust-version = "1.70"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
red4ext-rs = { git = "https://github.com/jac3km4/red4ext-rs.git", tag = "v0.5.0" }
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = "thin"
